--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.18.4",
+    "react-player": "^2.10.1",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
